--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -62,7 +62,7 @@ microservice-chart:
     port: 3000
   ingress:
     create: true
-    host: "weudev.ecommerce.internal.dev.platform.pagopa.it"
+    host: "weuuat.ecommerce.internal.uat.platform.pagopa.it"
     path: /pagopa-ecommerce-transactions-service/(.*)
   serviceAccount:
     create: false
@@ -100,18 +100,18 @@ microservice-chart:
           metricAggregationType: Count
           targetValue: "30"
   envConfig:
-    MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
-    MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
+    MONGO_HOST: pagopa-u-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
+    MONGO_USERNAME: pagopa-u-weu-ecommerce-cosmos-account
     MONGO_PORT: "10255"
-    REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
+    REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
-    NODO_URI: https://api.dev.platform.pagopa.it/nodo/node-for-psp/v1
+    NODO_URI: https://api.uat.platform.pagopa.it/nodo/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
-    ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
+    ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
     ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
-    ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.dev.platform.pagopa.it/ecommerce/payment-instruments-service/v1
+    ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-instruments-service/v1
     ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: http://pagopa-ecommerce-payment-instruments-service:8080
