feat: add secret for notifications service

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -121,6 +121,7 @@ microservice-chart:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
+    NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
