--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -84,6 +84,7 @@ microservice-chart:
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
     NOTIFICATIONS_SERVICE_URI: https://api.dev.platform.pagopa.it/ecommerce/notifications-service/v1
+    NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
