--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -91,6 +91,7 @@ microservice-chart:
     REDIS_PASSWORD: redis-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
+    ECOMMERCE_STORAGE_CONNECTION_STRING: ecommerce-storage-connection-string
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
