fix: enable ssl for redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.redis.host=${REDIS_HOST}
 spring.redis.password=${REDIS_PASSWORD}
 spring.redis.port=${REDIS_PORT}
-spring.redis.ssl=false
+spring.redis.ssl=${REDIS_SSL_ENABLED}
 spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
 logging.level.web=debug
