--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -23,6 +23,7 @@ microservice-chart:
       MONGO_SSL_ENABLED: "true"
       REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
       REDIS_PORT: "6380"
+      REDIS_SSL_ENABLED: "true"
       NODO_URI: https://api.uat.platform.pagopa.it/nodo/node-for-psp/v1
       NODO_READ_TIMEOUT: "10000"
       NODO_CONNECTION_TIMEOUT: "10000"
@@ -112,6 +113,7 @@ microservice-chart:
     MONGO_SSL_ENABLED: "true"
     REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
+    REDIS_SSL_ENABLED: "true"
     NODO_URI: https://api.uat.platform.pagopa.it/nodo/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
