--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -24,7 +24,7 @@ microservice-chart:
       REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
       REDIS_PORT: "6380"
       REDIS_SSL_ENABLED: "true"
-      NODO_URI: https://api.uat.platform.pagopa.it/nodo/node-for-psp/v1
+      NODO_URI: https://api.uat.platform.pagopa.it/nodo
       NODO_READ_TIMEOUT: "10000"
       NODO_CONNECTION_TIMEOUT: "10000"
       ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
@@ -114,7 +114,7 @@ microservice-chart:
     REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
     REDIS_SSL_ENABLED: "true"
-    NODO_URI: https://api.uat.platform.pagopa.it/nodo/node-for-psp/v1
+    NODO_URI: https://api.uat.platform.pagopa.it/nodo
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
