fix after review

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ MONGO_PORT=27001
 REDIS_HOST="pagopa-ecommerce-redis"
 REDIS_PASSWORD="redis_password"
 REDIS_PORT=6379
+
+NODOPERPM_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
+NODOPERPM_READ_TIMEOUT=10000
+NODOPERPM_CONNECTION_TIMEOUT=10000
+
+
 NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
