--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
 logging.level.web=debug
 
+
+nodoPerPM.uri=${NODOPERPM_URI}
+nodoPerPM.readTimeout=${NODOPERPM_READ_TIMEOUT}
+nodoPerPM.connectionTimeout=${NODOPERPM_CONNECTION_TIMEOUT}
+
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
