--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -4,6 +4,10 @@ nodo.connectionTimeout=10000
 nodo.retry=2
 nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
 
+nodoPerPM.uri=https://localhost/nodo
+nodoPerPM.readTimeout=10000
+nodoPerPM.connectionTimeout=10000
+
 ecommerceSessions.uri=https://localhost/nodo
 ecommerceSessions.readTimeout=10000
 ecommerceSessions.connectionTimeout=10000
