--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -2,12 +2,10 @@ microservice-chart:
   namespace: "ecommerce"
   nameOverride: ""
   fullnameOverride: ""
-
   image:
     repository: pagopadcommonacr.azurecr.io/pagopaecommercetransactionsservice
-    tag: "latest" #improve
+    tag: "0.3.7" #improve
     pullPolicy: Always
-
   livenessProbe:
     httpGet:
       path: /actuator/health/liveness
@@ -15,7 +13,6 @@ microservice-chart:
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
-
   readinessProbe:
     httpGet:
       path: /actuator/health/readiness
@@ -23,42 +20,33 @@ microservice-chart:
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
-
   deployment:
     create: true
-
   service:
     create: true
     type: ClusterIP
     port: 8080
-
   ingress:
     create: true
     host: "weudev.ecommerce.internal.dev.platform.pagopa.it"
     path: /pagopa-ecommerce-transactions-service/(.*)
-
   serviceAccount:
     create: false
     annotations: {}
     name: ""
-
   podAnnotations: {}
-
   podSecurityContext:
     seccompProfile:
       type: RuntimeDefault
-
   securityContext:
     allowPrivilegeEscalation: false
-
   resources:
     requests:
       memory: "256Mi"
-      cpu: "40m"
+      cpu: "200m"
     limits:
       memory: "256Mi"
-      cpu: "150m"
-
+      cpu: "200m"
   autoscaling:
     minReplica: 1
     maxReplica: 2
@@ -77,12 +65,11 @@ microservice-chart:
           # metricAggregationInterval: "-1:1:0"
           metricAggregationType: Count
           targetValue: "30"
-
   envConfig:
     MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
     MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
     MONGO_PORT: "10255"
-    REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net 
+    REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
     NODO_URI: https://api.dev.platform.pagopa.it/nodo/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
@@ -96,19 +83,24 @@ microservice-chart:
     PAYMENT_TRANSACTIONS_GATEWAY_URI: http://pagopa-ecommerce-payment-instruments-service:8080
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
-
+    NOTIFICATIONS_SERVICE_URI: https://api.dev.platform.pagopa.it/ecommerce/notifications-service/v1
+    NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
+    NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
+    TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
+    TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
-
+    NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
+    ECOMMERCE_STORAGE_CONNECTION_STRING: ecommerce-storage-connection-string
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
-
+  canaryDelivery:
+    deployment:
+      image:
+        tag: ""
