feat: add ccp and uri config refactoring

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,16 @@ NODOPERPM_READ_TIMEOUT=10000
 NODOPERPM_CONNECTION_TIMEOUT=10000
 
 
-NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
+NODO_HOSTNAME="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
+NODO_PER_PSP_URI=/webservices/pof/PagamentiTelematiciPspNodoservice
+NODE_FOR_PSP_URI=/webservices/pof/PagamentiTelematiciPspNodoservice
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"idBrokerPsp\",\"password\":\"password\"}"
+
+NODOPERPM_URI="http://localhost:3030"
+NODOPERPM_READ_TIMEOUT=10000
+NODOPERPM_CONNECTION_TIMEOUT=10000
 
 ECOMMERCE_SESSIONS_URI="http://pagopa-ecommerce-sessions-service:8080"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
