--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -1,4 +1,6 @@
-nodo.uri=https://localhost/nodo
+nodo.hostname=https://localhost/nodo
+nodo.nodoperpsp.uri=/webservices/pof/PagamentiTelematiciPspNodoservice
+nodo.nodeforpsp.uri=/webservices/pof/PagamentiTelematiciPspNodoservice
 nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.retry=2
