--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -71,7 +71,9 @@ microservice-chart:
     MONGO_PORT: "10255"
     REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
-    NODO_URI: https://api.dev.platform.pagopa.it/nodo/node-for-psp/v1
+    NODO_HOSTNAME: https://api.dev.platform.pagopa.it
+    NODO_PER_PSP_URI: /nodo/nodo-per-psp/v1
+    NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
