--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ nodoPerPM.uri=${NODOPERPM_URI}
 nodoPerPM.readTimeout=${NODOPERPM_READ_TIMEOUT}
 nodoPerPM.connectionTimeout=${NODOPERPM_CONNECTION_TIMEOUT}
 
-nodo.uri=${NODO_URI}
+nodo.hostname=${NODO_HOSTNAME}
+nodo.nodoperpsp.uri=${NODO_PER_PSP_URI}
+nodo.nodeforpsp.uri=${NODE_FOR_PSP_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
 nodo.connection.string=${NODO_CONNECTION_STRING}
