--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -75,8 +75,8 @@ microservice-chart:
     NODO_PER_PSP_URI: /nodo/nodo-per-psp/v1
     NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
     NODOPERPM_URI: https://api.dev.platform.pagopa.it/nodo/nodo-per-pm/v1
-    NODOPERPM_READ_TIMEOUT: 10000
-    NODOPERPM_CONNECTION_TIMEOUT: 10000
+    NODOPERPM_READ_TIMEOUT: "10000"
+    NODOPERPM_CONNECTION_TIMEOUT: "10000"
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
