--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -71,6 +71,7 @@ microservice-chart:
     MONGO_PORT: "10255"
     REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
+    REDIS_SSL_ENABLED: "true"
     NODO_HOSTNAME: https://api.dev.platform.pagopa.it
     NODO_PER_PSP_URI: /nodo/nodo-per-psp/v1
     NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
