--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -27,7 +27,7 @@ microservice-chart:
       NODO_HOSTNAME: https://api.uat.platform.pagopa.it
       NODO_PER_PSP_URI: /nodo/nodo-per-psp/v1
       NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
-      NODOPERPM_URI: https://api.uat.platform.pagopa.it/nodo/nodo-per-pm/v1
+      NODOPERPM_URI: /nodo/nodo-per-pm/v1
       NODOPERPM_READ_TIMEOUT: "10000"
       NODOPERPM_CONNECTION_TIMEOUT: "10000"
       NODO_READ_TIMEOUT: "10000"
@@ -124,7 +124,7 @@ microservice-chart:
     NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
-    NODOPERPM_URI: https://api.uat.platform.pagopa.it/nodo/nodo-per-pm/v1
+    NODOPERPM_URI: /nodo/nodo-per-pm/v1
     NODOPERPM_READ_TIMEOUT: "10000"
     NODOPERPM_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
