--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -6,7 +6,7 @@ nodo.connectionTimeout=10000
 nodo.retry=2
 nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
 
-nodoPerPM.uri=https://localhost/nodo
+nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
 nodoPerPM.connectionTimeout=10000
 
