Chk 647 verify params (#52)
* feat: add ccp and uri config refactoring

* fix: update release branch for testing

* fix: missing config

* fix: config

* fix: update conf

* fix: docker release

* Bump version [skip ci]

* fix: revert docker release

* Bump version [skip ci]

* fix: add codifica infra

* Bump version [skip ci]

* Bump version [skip ci]

* fix: verificaRPT file

* Bump version [skip ci]

* fix: codstazine and applicationCode

* Bump version [skip ci]

* fix qrcode for verificarpt

* Bump version [skip ci]

* fix: iuv in verifica rpt

* Bump version [skip ci]

* fix: wsdl nodoperpsp

* Bump version [skip ci]

* fix: wsdl nodoperpsp

* Bump version [skip ci]

* fix: wsdl nodoperpsp

* Bump version [skip ci]

* fix: wsdl nodoperpsp

* Bump version [skip ci]

* fix: uri for nofo activation

* Bump version [skip ci]

* fix: add     request.setIdentificativoIntermediarioPSPPagamento(nodoConnectionParams.getIdBrokerPSP());

* Bump version [skip ci]

* fix: add setIdentificativoCanalePagamento

* Bump version [skip ci]

* fix: add CodificaInfrastrutturaPSP

* Bump version [skip ci]

* fix: IdentificativoCanalePagamento

* Bump version [skip ci]

* fix: applicationcode

* Bump version [skip ci]

* Bump version [skip ci]

* nodo utilitis to get qrcode from rpt id

* Bump version [skip ci]

* fix semantic error for application code

* Bump version [skip ci]

* use nodoUtilities in payment request service too

* Bump version [skip ci]

* fix nodo per pm uri and hostname

* Bump version [skip ci]

* put info pagamento url inside property

* Bump version [skip ci]

* feat(test): add NodoUtilitiesTest

* fix sonar warning

* rever main check for deploy

* remove sonar warning

* remove sonar warning

* remove sonar warning on test

Co-authored-by: pagopa-github-bot <>
Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MacBook-Pro-di-Gianluca.local>
Co-au

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
   image:
     repository: pagopadcommonacr.azurecr.io/pagopaecommercetransactionsservice
-    tag: "0.3.7" #improve
+    tag: "0.4.23" #improve
     pullPolicy: Always
   livenessProbe:
     httpGet:
@@ -71,7 +71,13 @@ microservice-chart:
     MONGO_PORT: "10255"
     REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
-    NODO_URI: https://api.dev.platform.pagopa.it/nodo/node-for-psp/v1
+    REDIS_SSL_ENABLED: "true"
+    NODO_HOSTNAME: https://api.dev.platform.pagopa.it
+    NODO_PER_PSP_URI: /nodo/nodo-per-psp/v1
+    NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+    NODOPERPM_URI: /nodo/nodo-per-pm/v1/informazioniPagamento
+    NODOPERPM_READ_TIMEOUT: "10000"
+    NODOPERPM_CONNECTION_TIMEOUT: "10000"
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
