--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -1,10 +1,12 @@
-nodo.uri=https://localhost/nodo
+nodo.hostname=https://localhost/nodo
+nodo.nodoperpsp.uri=/webservices/pof/PagamentiTelematiciPspNodoservice
+nodo.nodeforpsp.uri=/webservices/pof/PagamentiTelematiciPspNodoservice
 nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.retry=2
 nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
 
-nodoPerPM.uri=https://localhost/nodo
+nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
 nodoPerPM.connectionTimeout=10000
 
